@@ -430,6 +430,9 @@
   </target>
 
   <target name="doc" depends="forrest.check,javadoc,pydoc,cdoc" description="Generate forrest-based documentation. To use, specify -Dforrest.home=&lt;base of Apache Forrest installation&gt; on the command line." if="forrest.home">
+    <echo  file="${build.dir}/avro.ent" append="false">
+      &lt;!ENTITY AvroVersion "${version}"&gt;
+    </echo>
     <exec executable="${forrest.home}/bin/forrest" failonerror="true">
       <env key="JAVA_HOME" value="${java5.home}"/>
       <arg value="-Dproject.content-dir=src/doc"/>
